@@ -122,14 +122,14 @@ main(int ac, char *av[])
      */
     arg_index = parse_args(ac, av, &progname);
     if (arg_index < ac) {
-	char *ifname = bu_realpath(av[arg_index], NULL);
+	char *ifname = bu_file_realpath(av[arg_index], NULL);
 	/* open file of unsigned shorts */
 	if (freopen(ifname, "r", stdin) == (FILE *)NULL) {
 	    perror(ifname);
-	    bu_free(ifname, "ifname alloc from bu_realpath");
+	    bu_free(ifname, "ifname alloc from bu_file_realpath");
 	    return -1;
 	}
-	bu_free(ifname, "ifname alloc from bu_realpath");
+	bu_free(ifname, "ifname alloc from bu_file_realpath");
     } else if (isatty((int)fileno(stdin))) {
 	usage(progname);
     }
